# brakit

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TELEMETRY.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/design/: README.md  analysis-engine.md  architecture.md  dashboard.md  event-bus.md  mcp.md  python-sdk.md  safety.md  service-registry.md
scripts/: export-dashboard.ts
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/brakit/: __init__.py  _setup.py  _telemetry.py
sdks/python/brakit/adapters/: __init__.py  _normalize.py  _protocol.py  asyncpg.py  sqlalchemy.py
sdks/python/brakit/constants/: __init__.py  encoding.py  events.py  general.py  headers.py  limits.py  logger.py  network.py  patterns.py  routes.py  transport.py
sdks/python/brakit/core/: __init__.py  circuit_breaker.py  context.py  decompress.py  event_bus.py  guards.py  registry.py  safe_wrap.py  sanitize.py
sdks/python/brakit/frameworks/: __init__.py  _protocol.py  _shared.py  fastapi.py  flask.py
sdks/python/brakit/hooks/: __init__.py  _shared.py  aiohttp_hook.py  exceptions.py  http_client.py  httpx_hook.py  logging.py
sdks/python/brakit/store/: __init__.py  base.py  error_store.py  fetch_store.py  log_store.py  query_store.py  request_store.py
sdks/python/brakit/transport/: __init__.py  discovery.py  forwarder.py  port_file.py
sdks/python/brakit/types/: __init__.py  events.py  http.py  telemetry.py
sdks/python/tests/: conftest.py  test_circuit_breaker.py  test_context.py  test_decompress.py  test_event_bus.py  test_guards.py  test_normalize.py  test_safe_wrap.py  test_sanitize.py  test_stores.py
sdks/python/tests/frameworks/: test_fastapi.py  test_flask.py
src/: constants.ts  index.ts  types.ts
src/analysis/: categorize.ts  engine.ts  group.ts  insight-tracker.ts  insights.ts  issue-mappers.ts  label.ts  transforms.ts
src/cli/: templates.ts
src/constants/: cli.ts  client.ts  config.ts  encoding.ts  events.ts  features.ts  headers.ts  http.ts  index.ts  labels.ts  lifecycle.ts  limits.ts  mcp.ts  metrics.ts  network.ts  routes.ts  sdk-events.ts  severity.ts  telemetry.ts  thresholds.ts  timeline.ts  transport.ts
src/core/: disposable.ts  event-bus.ts  index.ts  service-registry.ts  services.ts
src/dashboard/: api.ts  client.ts  flows.ts  layout.ts  page.ts  router.ts  sse.ts  styles.ts
src/detect/: project.ts
src/graph/: constants.ts  graph-builder.ts  graph-model.ts
src/instrument/: adapter-registry.ts  adapter.ts  preload.ts  transport.ts
src/lifecycle/: index.ts  shutdown.ts  startup.ts
src/mcp/: client.ts  discovery.ts  enrichment.ts  prompts.ts  server.ts  types.ts
src/output/: terminal.ts
src/process/: output-filter.ts  port.ts  spawn.ts
src/proxy/: handler.ts  request-log.ts  server.ts  static-patterns.ts  websocket.ts
src/runtime/: activate.ts  capture.ts  guard.ts  health.ts  index.ts  interceptor.ts  safe-wrap.ts  setup.ts
src/store/: error-store.ts  fetch-store.ts  finding-id.ts  finding-store.ts  index.ts  issue-store.ts  log-store.ts  metrics-store.ts  query-store.ts  request-log.ts  request-store.ts  telemetry-store.ts
src/telemetry/: config.ts  index.ts
src/types/: analysis.ts  api-contracts.ts  config.ts  detection.ts  finding-lifecycle.ts  http.ts  (+8 more)
(+277 files in other folders)
