[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brakit"
version = "0.1.0"
description = "Zero-config observability for Python web frameworks"
readme = {text = "Zero-config observability for Python web frameworks.", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.9"
dependencies = []
keywords = ["observability", "telemetry", "debugging", "flask", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[project.optional-dependencies]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["brakit"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
